# BinaryBuilder.jl

./: .codecov.yml  .gitignore  .travis.yml  Artifacts.toml  CNAME  LICENSE.md  Manifest.toml  Project.toml  README.md  REQUIRE  appveyor.yml  azure-pipelines.yml  codecov.yml  generate_precompile.jl  replace_includes.sh  versions.js
.ci/: .env  .gitattributes  agent_startup.conf  install_agents.sh  restart_agents.sh  run_agent.sh  stop_agents.sh
contrib/: Manifest.toml  Project.toml  generate_instructions_list.jl
dev/: .documenter-siteinfo.json  index.html  objects.inv  search_index.js
docs/: .gitignore  Manifest.toml  Project.toml  make.jl
release-0.0/: environment_variables.html  index.html  reference.html
src/: Auditor.jl  AutoBuild.jl  BinDeps2.jl  BinaryBuilder.jl  BuildAPI.jl  BuildMeta.jl  BuildResult.jl  BuildStep.jl  Declarative.jl  Dependencies.jl  Dependency.jl  DockerRunner.jl  DownloadEngine.jl  Logging.jl  OutputCollector.jl  PlatformEngines.jl  Platforms.jl  Prefix.jl  Products.jl  QemuRunner.jl  RootFS.jl  Rootfs.jl  RootfsHashTable.jl  Runner.jl  Sources.jl  UserNSRunner.jl  Wizard.jl  cli_tools.jl  compat.jl  squashfs_utils.jl
test/: .gitignore  REQUIRE  auditing.jl  basic.jl  build_libfoo_tarball.jl  build_libfoo_tarballs.jl  builder_tests.jl  building.jl  buildmeta.jl  compilers.jl  declarative.jl  gen_package.jl  jll.jl  nonbuilder_tests.jl  package_tests.jl  runtests.jl  wizard.jl
test/build_tests/libfoo/: .gitignore  CMakeLists.txt  LICENSE.md  Makefile  Makefile.am  configure.ac  fooifier.c  fooifier.cpp  libfoo.c  libfoo.pc  meson.build
v0.0.2/: environment_variables.html  reference.html  search_index.js
v0.0.3/: environment_variables.html  index.html  reference.html  search_index.js
v0.0.4/: FAQ.html  build_tips.html  rootfs.html  search.html  search_index.js  tricksy_gotchas.html
v0.2.5/: index.html  search_index.js
v0.2.6/: index.html  search_index.js
v0.3.0/: index.html  search_index.js
v0.3.1/: index.html  search_index.js
v0.3.2/: index.html  search_index.js
v0.3.3/: index.html
v0.3.4/: index.html  search_index.js
v0.3.5/: index.html  search_index.js
v0.3.6/: index.html  search_index.js
v0.3.7/: index.html  search_index.js
v0.4.0/: index.html  search_index.js
v0.4.1/: index.html  search_index.js
v0.4.2/: index.html  search_index.js
v0.4.3/: index.html  (+1 more)
(+675 files in other folders)
